# assistant

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: .gitignore  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  espeak_jni.c
android/app/src/main/cpp/include/: espeak_ng.h  speak_lib.h
android/gradle/wrapper/: gradle-wrapper.properties
iOS/NimbleEdgeAI Assistant.xcodeproj/: project.pbxproj
iOS/NimbleEdgeAI/views/: HomeView.swift
iOS/NimbleEdgeAI/views/ChatTableView/: ChatTableView.swift
ios/: GoogleService-Info.plist  Podfile
ios/NimbleEdgeAI/: EspeakNGService.swift  Info.plist  Launch Screen.storyboard  NimbleEdgeAIApp.swift
ios/NimbleEdgeAI Assistant.xcodeproj/: project.pbxproj
ios/NimbleEdgeAI Assistant.xcodeproj/xcshareddata/xcschemes/: NimbleEdgeAI Assistant.xcscheme
ios/NimbleEdgeAI/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/NimbleEdgeAI/Assets.xcassets/ic_ne_logo.imageset/: Contents.json
ios/NimbleEdgeAI/Constants/: Constants.swift  NimbleNetSettings.swift
ios/NimbleEdgeAI/Repository/: ChatRepository.swift
ios/NimbleEdgeAI/Utils/: AsyncSemaphore.swift  AtomicInteger.swift  ContinousAudioPlayer.swift  Extensions.swift  Helpers.swift
ios/NimbleEdgeAI/assets/: wave_teal.json
ios/NimbleEdgeAI/components/: LoaderTextProvider.swift
ios/NimbleEdgeAI/models/: ArrangedHistoryItem.swift  Chat.swift  ChatMessage.swift  DownloadItem.swift  DownloadProgressManager.swift  HistoryItem.swift
ios/NimbleEdgeAI/views/:  IntroductionPageView.swift  ChatView.swift  ContentView.swift  DownloadingView.swift  HistoryView.swift  VoiceOverlay.swift
ios/espeak-ng-data/: version
(+123 files in other folders)
